Fix overlap of gallery Also change github icon to white and fixed css center bug

--- a/ovation_app/static/main.css
+++ b/ovation_app/static/main.css
@@ -72,23 +72,31 @@ section{
   display: flex;
 }
 
+.logo{
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.logo img {
+  width: 100%;
+  height: auto;
+}
 .logo:nth-child(1){
   transition-delay: 100ms;
 }
 
 .logo:nth-child(2){
-  transition-delay: 200ms;
-}
-
-.logo:nth-child(3){
   transition-delay: 300ms;
 }
 
-.logo:nth-child(4){
-  transition-delay: 400ms;
+div.desc {
+  padding: 15px;
+  text-align: center;
 }
-/* Styles for input forms */
 
+/* Styles for input forms */
 .input-form{
   text-align: center;
 }
